syntax = "proto3";

option go_package="github.com/hueypark/grpc-tutorial/mmorpg/pb";

service Game {
  rpc Login(LoginReq) returns (LoginRes) {}

  rpc Move(stream MoveReq) returns (stream MovePush) {}
}

message LoginReq {
  string msg = 1;
}

message LoginRes {
  string msg = 1;
}

message MoveReq {
  int32 position = 1;
}

message MovePush {
  int32 position = 1;
}
